# Gath3r

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  autogen.sh  configure.ac  libgthpcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis/: lint_04_install.sh  lint_05_before_script.sh  lint_06_script.sh  test_03_before_install.sh  test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
.tx/: config
build_msvc/: README.md  common.vcxproj  gthpcoin.sln  gthpcoin_config.h  libsecp256k1_config.h  msvc-autogen.py
contrib/: README.md  gitian-build.py  gthpcoin-cli.bash-completion  gthpcoin-qt.pro  gthpcoin-tx.bash-completion  gthpcoind.bash-completion  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  description.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  gthpcoin-conf.md  init.md  productivity.md  psbt.md  reduce-traffic.md  release-notes-14054.md  release-notes-15566.md  release-notes-15637.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  gthpcoin-cli.1  gthpcoin-qt.1  gthpcoin-tx.1  gthpcoin-wallet.1  gthpcoind.1
(+1019 files in other folders)
