dist_man1_MANS=

if BUILD_GTHPCOIND
  dist_man1_MANS+=gthpcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=gthpcoin-qt.1
endif

if BUILD_GTHPCOIN_CLI
  dist_man1_MANS+=gthpcoin-cli.1
endif

if BUILD_GTHPCOIN_TX
  dist_man1_MANS+=gthpcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_GTHPCOIN_WALLET
  dist_man1_MANS+=gthpcoin-wallet.1
endif
endif
